<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="clear">Clear</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
</resources>
