...
            onClick = onBackClick,
            contentDescription = t("actions.back"),
            modifier = Modifier.testTag("workIncidentSearchGoBackBtn"),
        )
        ClearableTextField(
            modifier = Modifier
                .testTag("workIncidentSearchTextField")
                .weight(1f),
            labelResId = 0,
            label = "",
            placeholder = t("actions.search"),
            value = q,
            onValueChange = updateQuery,
...
