name: Incident Search with invalid query
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - pull-request
env:
  SEARCH_QUERY: qwertyqwerty
onFlowStart:
  - runFlow: ../auth-tests/login.yaml
---
# wait for incidents to load
- waitForAnimationToEnd:
    timeout: 5000
# start searching after loading spinner is invisible
- assertNotVisible:
    id: workIncidentsLoadingIndicator
- tapOn:
    id: "workIncidentSearchBtn"
- assertVisible: "Search"
- tapOn:
    id: "workIncidentSearchTextField"
- inputText: ${SEARCH_QUERY}
- assertVisible: "No cases found matching ${SEARCH_QUERY}."
- assertVisible: "Clear"
- tapOn: "Clear"
- assertNotVisible: "No cases found matching ${SEARCH_QUERY}."

