name: Work View
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - pull-request
onFlowStart:
  - runFlow: ../auth-tests/login.yaml
---
- tapOn:
    id: "navItem_Work"
- assertVisible:
    id: "navItem_Work"
- assertVisible:
    id: "navItem_Menu"

- assertVisible:
    id: "workIncidentSelectorFab"
- assertVisible:
    id: "workIncidentSearchBtn"
- assertVisible:
    id: "workIncidentFilterBtn"
- assertVisible:
    id: "workZoomInBtn" 
- assertVisible:
    id: "workZoomOutBtn"
- assertVisible:
    id: "workZoomToInteractiveBtn"
- assertVisible:
    id: "workZoomToIncidentBtn"
- assertVisible:
    id: "workMyLocationFab"
- assertVisible:
    id: "workNewCaseFab"
- assertVisible:
    id: "workToggleTableMapViewFab"
# Show total number of cases
- assertVisible: .*(\d+)(\s)(Cases).*
